implement sync endpoints (wip)
